tests/A2/reject/badExpr.ul
void main(){
    int x;
    string z;
    int result;
    x = 2;
    z = "hello";
    result = x + z;
}